# tree-sitter-vesti

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  foo.ves  go.mod  grammar.js  package.json  prologue.ves  pyproject.toml  section12-7.ves  setup.py  tree-sitter-vesti.wasm  tree-sitter.json
bindings/c/: tree-sitter-vesti.h  tree-sitter-vesti.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vesti/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVestiTests/: TreeSitterVestiTests.swift
queries/: highlights.scm
queries/vesti/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: bugs.txt  docclass.txt  examples.txt  import.txt  jlcode.txt  pycode.txt  useenv.txt  vesti_statements.txt
