[package]
name = "tree-sitter-vesti"
description = "tree-sitter parser for vesti"
version = "14.0.0"
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vesti"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/e0328eric/vesti"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
